Support passkey management through admin-panel and s2s api (#221)
