# server/src/scripts/swagger.json
@@ -739,6 +739,25 @@
           "appName"
         ]
       },
+      "UserPasskey": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "credentialId": {
+            "type": "string"
+          },
+          "counter": {
+            "type": "number"
+          }
+        },
+        "required": [
+          "id",
+          "credentialId",
+          "counter"
+        ]
+      },
       "PutUserReq": {
         "type": "object",
         "properties": {
@@ -1880,6 +1899,92 @@
         "responses": {
           "204": {
             "description": "Successful operation with no content to return"
+          }
+        }
+      }
+    },
+    "/api/v1/users/{authId}/passkeys": {
+      "get": {
+        "summary": "Get a list of passkeys for a user",
+        "description": "Required scope - read_user",
+        "tags": [
+          "Users"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "authId",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "The authId of the user"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A list of passkeys",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "passkeys": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/UserPasskey"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/users/{authId}/passkeys/{passkeyId}": {
+      "delete": {
+        "summary": "Remove a passkey for a user",
+        "description": "Required scope - write_user",
+        "tags": [
+          "Users"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "authId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The authId of the user"
+          },
+          {
+            "in": "path",
+            "name": "passkeyId",
+            "schema": {
+              "type": "number"
+            },
+            "required": true,
+            "description": "The id of the passkey"
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
